[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Person.gd" type="Script" id=1]
[ext_resource path="res://Materials/PlayerSkin.tres" type="Material" id=2]
[ext_resource path="res://Materials/PersonShirt.tres" type="Material" id=3]
[ext_resource path="res://Audio/pattern_match.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleMesh" id=2]
radius = 0.2
mid_height = 2.0

[sub_resource type="CapsuleMesh" id=3]
radius = 0.2
mid_height = 2.0

[sub_resource type="SphereMesh" id=4]

[node name="Person" type="Spatial" groups=[
"person",
]]
script = ExtResource( 1 )

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 3 )

[node name="RightArm" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.409015, -0.912527, 0, 0.912527, 0.409015, -1.26525, -0.00720215, 0.410675 )
mesh = SubResource( 2 )
material/0 = ExtResource( 2 )

[node name="LeftArm" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.409015, -0.912527, 0, 0.912527, 0.409015, 1.265, -0.007, 0.411 )
mesh = SubResource( 3 )
material/0 = ExtResource( 2 )

[node name="Head" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.39185, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )

[node name="PatternTween" type="Tween" parent="."]

[node name="Ding" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
